add: footer for screens less then 768px

--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -1,4 +1,15 @@
 .footer__column-links {
-    display: flex;
     flex-direction: column;
+}
+@media screen and (min-width: 768px){
+    .footer__column-links {
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer__column-links {
+        position: relative;
+        display: none;
+    }
 }
