--- a/blocks/footer/_column/_content/footer__column_content_copyright.css
+++ b/blocks/footer/_column/_content/footer__column_content_copyright.css
@@ -1,3 +1,13 @@
-.footer__column_content_copyright {
-    flex-basis: 711px;
+@media screen and (min-height: 768px) {
+    .footer__column_content_copyright {
+        flex-basis: 711px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer__column_content_copyright {
+        max-height: 100px;
+        justify-content: center;
+        margin-top: 50px;
+    }
 }
